Added new integration for division services
